[package]
name = "Prometheus"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
http = "1.2.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
] }
tokio = { version = "1.44.0", features = [
  "full",
  "macros",
  "rt-multi-thread",
  "tracing",
] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
